Fix spacing for mobile menu

--- a/src/less/template-responsive.less
+++ b/src/less/template-responsive.less
@@ -646,12 +646,19 @@
                 }
             }
         }
+
+		.navbar-inner .nav>li {
+
+		}
         .navbar-inner {
             .nav + .navbar-search {
                 margin-left: 0px;
             }
             .nav {
                 li {
+					margin-left: 0;
+					margin-right: 0;
+					
                     &.deeper {
                         &:hover, &:focus {
                             > a {
